# hands_on_scikit_build

./: CMakeLists.txt  README.md  bench_tbb.cpp  environment.yml  pyproject.toml  setup.py
skbgudhi/: CMakeLists.txt  bench_tbb.h  cyt.pyx  pyb.cc
skbgudhi/test/: test_cpp_api.py
