[build-system]
requires = ["scikit-build-core", "cython", "pybind11", ]
build-backend = "scikit_build_core.build"

[project]
name = "skbgudhi"
version = "0.0.0"
description="GUDHI python module build with scikit-build"
readme = "introduction.rst"
authors = [
  { name = "The GUDHI Editorial Board", email = "gudhi-contact@inria.fr" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "bdist"

[tool.scikit-build.cmake.define]
# Put CMake defines in this table.
